--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -121,6 +121,7 @@ active-opacity = 0.95;
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'",
                   "class_g = 'firefox' && argb",
+                  "class_g = 'Navigator' && argb",
                  ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
