--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -113,7 +113,7 @@ label-muted-foreground = ${colours.tertiary}
 type = internal/date
 interval = 1
 date = " %d %b %Y  "
-time = "%I:%M:%S %p"
+time = "%H:%M:%S"
 format-prefix-foreground = ${colours.secondary}
 label = %date%%time%
 
