--- a/.config/flashfocus/flashfocus.yml
+++ b/.config/flashfocus/flashfocus.yml
@@ -54,6 +54,8 @@ flash-lone-windows: 'always'
 rules:
   - window-class: firefox
     default-opacity: 1
+  - window-class: Navigator
+    default-opacity: 1
 #
 #
 # I also would prefer that firefox windows are not flashed on focus:
