--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,19 @@
 !.p10k.zsh
 
 !.config
+
 !.config/alacritty
 !.config/alacritty/*
+
 !.config/cava
 !.config/cava/*
+
 !.config/flashfocus
 !.config/flashfocus/*
+
 !.config/i3
 !.config/i3/*
+
 !.config/nvim
 !.config/nvim/*
 !.config/nvim/ftplugin
@@ -22,11 +27,21 @@
 !.config/nvim/lua/user/*
 !.config/nvim/lua/plugins
 !.config/nvim/lua/plugins/*
+
 !.config/picom
 !.config/picom/*
+
 !.config/polybar
 !.config/polybar/*
+
 !.config/polybar/scripts
 !.config/polybar/scripts/*
+
 !.config/rofi
 !.config/rofi/*
+
+!.config/fastfetch
+!.config/fastfetch/*
+
+!.config/dunst
+!.config/dunst/*
