--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,11 +36,10 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id /home/drew/.config/i3/volume-change.sh -u &
+bindsym XF86AudioLowerVolume exec --no-startup-id /home/drew/.config/i3/volume-change.sh -d &
+bindsym XF86AudioMute exec --no-startup-id /home/drew/.config/i3/volume-change.sh -m &
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
@@ -53,8 +52,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym Control+$alt+t exec --no-startup-id alacritty
-bindsym $mod+Return exec --no-startup-id alacritty
+bindsym Control+$alt+t exec --no-startup-id kitty
+bindsym $mod+Return exec --no-startup-id kitty
 
 # kill focused window
 bindsym $mod+q kill
@@ -107,14 +106,8 @@ bindsym $mod+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+Shift+space focus mode_toggle
 
-# focus the parent container
-# bindsym $mod+p focus parent
 
-# focus the child container
-# bindsym $mod+l focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+# names of workspaces
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -126,7 +119,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+# rofi search workspaces
+bindsym $mod+Tab exec --no-startup-id ~/.config/i3/switch_workspace.sh
+# keybind workspaces
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -197,11 +192,9 @@ bindsym $mod+b exec --no-startup-id firefox
 bindsym XF86Tools exec --no-startup-id spotify-launcher
 bindsym $mod+z exec --no-startup-id code
 
-# wallpaper, rgb
-exec_always --no-startup-id ~/.config/i3/theme.sh
-
 # autostart
 exec_always --no-startup-id ~/.config/i3/startup.sh
+exec --no-startup-id discord --start-minimized
 exec --no-startup-id syncthing
 exec --no-startup-id greenclip daemon
 exec --no-startup-id xbindkeys
@@ -210,6 +203,10 @@ exec --no-startup-id wal -R
 exec --no-startup-id setxkbmap -option caps:escape
 exec --no-startup-id xset s off
 exec --no-startup-id xset -dpms
+exec --no-startup-id dunst
+
+# wallpaper, rgb
+exec_always --no-startup-id ~/.config/i3/theme.sh
 
 # window settings
 default_border none
@@ -226,4 +223,5 @@ bindsym $mod+Escape exec --no-startup-id "dm-tool switch-to-greeter"
 
 
 # screenshot
-bindsym Print exec --no-startup-id spectacle
+bindsym Print exec --no-startup-id flameshot gui
+
