--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -154,6 +154,7 @@ corner-radius = 20
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  "class_g = 'Dunst'",
 ];
 
 
