--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -167,6 +167,17 @@ type = custom/script
 exec = ~/.config/polybar/scripts/info-cava.py -f 24 -b 16 -e fffdfc,fffafe,ffeafa,ffc3d2 -c right
 tail = true
 
+[module/wallpaper]
+type = custom/script
+format-prefix = "󰸉"
+format-prefix-foreground = ${colours.secondary}
+exec = echo " "
+click-left = bash ~/.config/i3/theme.sh
+
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
+
 [module/powermenu]
 type = custom/menu
 
@@ -176,13 +187,13 @@ format-spacing = 1
 
 label-open = "   "
 label-open-foreground = ${colours.fourth}
-label-close =  cancel
+label-close = "   "
 label-close-foreground = ${colours.primary}
 label-separator = |
 label-separator-foreground = ${colours.foreground}
 
 ;Powermenu
-menu-0-0 = "Reboot "
+menu-0-0 = "Reboot"
 menu-0-0-exec = menu-open-1
 menu-0-0-foreground = ${colours.tertiary}
 
@@ -198,34 +209,23 @@ menu-0-2-foreground = ${colours.tertiary}
 menu-2-0 = "Shutdown"
 menu-2-0-exec = systemctl poweroff
 menu-2-0-foreground = ${colours.tertiary}
-menu-2-1 = "Cancel "
+menu-2-1 = "Cancel"
 menu-2-1-exec = menu-open-0
 menu-2-1-foreground = ${colours.tertiary}
 
 ;Reboot
-menu-1-0 = "Cancel "
-menu-1-0-exec = menu-open-0
+menu-1-0 = "Reboot"
+menu-1-0-exec = systemctl reboot
 menu-1-0-foreground = ${colours.tertiary}
-menu-1-1 = "Reboot"
-menu-1-1-exec = systemctl reboot
+menu-1-1 = "Cancel"
+menu-1-1-exec = menu-open-0
 menu-1-1-foreground = ${colours.tertiary}
 
 
 ;Hibernate
-menu-3-0 = "Hibernate "
+menu-3-0 = "Hibernate"
 menu-3-0-exec = systemctl hibernate
 menu-3-0-foreground = ${colours.tertiary}
 menu-3-1 = "Cancel"
 menu-3-1-exec = menu-open-0
 menu-3-1-foreground = ${colours.tertiary}
-
-[module/wallpaper]
-type = custom/script
-format-prefix = "󰸉"
-format-prefix-foreground = ${colours.secondary}
-exec = echo " "
-click-left = bash ~/.config/i3/theme.sh
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
