update dots, I dont remember what

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1020,6 +1020,7 @@ clear_all_shortcuts no
 #: kitty +kitten hints --hints-offset to zero for all mappings,
 #: including the builtin ones.
 
+
 #: Clipboard {{{
 
 map kitty_mod+c copy_to_clipboard
@@ -1106,7 +1107,7 @@ map kitty_mod+n new_os_window
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
-map ctrl+w close_window
+# map ctrl+w close_window
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 map kitty_mod+f move_window_forward
@@ -1275,7 +1276,11 @@ map kitty_mod+delete clear_terminal reset active
 #: screen contents into the scrollback buffer and clear the screen,
 #: instead of just clearing the screen::
 
-map ctrl+l combine : clear_terminal scroll active
+# map ctrl+l combine : clear_terminal scroll active
+
+# REMOVE CTRL+L and ctrl+w FOR NVIM BIND USAGE
+map ctrl+l none
+map ctrl+w none
 
 
 #: You can tell kitty to send arbitrary (UTF-8) encoded text to the
