--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,7 +49,7 @@ padding-right = 1
 module-margin = 1
 
 font-0 = DejaVuSansMono:style=Regular:pixelsize=12:antialias=true;3
-font-1 = DejaVuSansM Nerd Font:stype=Regular:pixelsize=14:antialias=true;3
+font-1 = DejaVuSansM Nerd Font:style=Regular:pixelsize=14:antialias=true;3
 
 modules-left = xworkspaces xwindow
 modules-center = spotify
@@ -112,8 +112,8 @@ label-muted-foreground = ${colours.tertiary}
 [module/date]
 type = internal/date
 interval = 1
-date = " %d %b %Y  "
-time = "%H:%M:%S"
+date = " %d %b |"
+time = " %H:%M:%S"
 format-prefix-foreground = ${colours.secondary}
 label = %date%%time%
 
@@ -205,13 +205,9 @@ menu-0-2 = "Hibernate"
 menu-0-2-exec = menu-open-3
 menu-0-2-foreground = ${colours.tertiary}
 
-;Shutdown
-menu-2-0 = "Shutdown"
-menu-2-0-exec = systemctl poweroff
-menu-2-0-foreground = ${colours.tertiary}
-menu-2-1 = "Cancel"
-menu-2-1-exec = menu-open-0
-menu-2-1-foreground = ${colours.tertiary}
+menu-0-3 = "Suspend"
+menu-0-3-exec = menu-open-4
+menu-0-3-foreground = ${colours.tertiary}
 
 ;Reboot
 menu-1-0 = "Reboot"
@@ -221,6 +217,13 @@ menu-1-1 = "Cancel"
 menu-1-1-exec = menu-open-0
 menu-1-1-foreground = ${colours.tertiary}
 
+;Shutdown
+menu-2-0 = "Shutdown"
+menu-2-0-exec = systemctl poweroff
+menu-2-0-foreground = ${colours.tertiary}
+menu-2-1 = "Cancel"
+menu-2-1-exec = menu-open-0
+menu-2-1-foreground = ${colours.tertiary}
 
 ;Hibernate
 menu-3-0 = "Hibernate"
@@ -229,3 +232,11 @@ menu-3-0-foreground = ${colours.tertiary}
 menu-3-1 = "Cancel"
 menu-3-1-exec = menu-open-0
 menu-3-1-foreground = ${colours.tertiary}
+
+;Suspsend
+menu-4-0 = "Suspend"
+menu-4-0-exec = openrgb --mode direct -c 000000; systemctl suspend
+menu-4-0-foreground = ${colours.tertiary}
+menu-4-1 = "Cancel"
+menu-4-1-exec = menu-open-0
+menu-4-1-foreground = ${colours.tertiary}
