--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -109,7 +109,7 @@ inactive-opacity = 0.90;
 frame-opacity = 1;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-inactive-opacity-override = true;
+inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 0.95;
@@ -118,11 +118,13 @@ active-opacity = 0.95;
 # inactive-dim = 0.2
 
 # Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'",
-                  "class_g = 'firefox' && argb",
-                  "class_g = 'Navigator' && argb",
-                 ];
+# focus-exclude = [ "class_g = 'Cairo-clock'",
+#                   "class_g = 'firefox' && argb",
+#                   "class_g = 'Navigator' && argb",
+#                   "class_g = 'gimp-2.10' && argb",
+#                   "class_g = 'Gimp-2.10' && argb",
+#                   "class_g = 'spotify' && argb",
+#                  ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -134,7 +136,22 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
+# opacity-rule = [
+#   "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
+#   "100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
+#   "100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
+#   "100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
+#   "100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'",
+#   "100:class_g = 'steam_app_526870' && focused",
+#   "100:class_g = 'steam_app_526870' && !focused",
+#   "100:class_g = 'gimp-2.10'"
+#   "100:class_g = 'Gimp-2.10'",
+#   "100:class_g = 'spotify'",
+# ];
 opacity-rule = [
+  "100:name *= 'Spotify'",
+  "100:class_g *= 'Spotify'",
+  "100:name *= 'Firefox'",
   "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
@@ -204,7 +221,8 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c",
-  "role = 'xborder'"
+  "role = 'xborder'",
+  "class_g = 'GLava'"
 ];
 
 #################################
